--- a/code/aplicacion.kv
+++ b/code/aplicacion.kv
@@ -43,7 +43,7 @@
 
                     ContainerMedium:
                         size_hint_y: .2
-                        CustomBottomA
+                        CustomButtonA
                             text: "LOGIN"
                             on_release: text_notice.text = str(root.login(ide.text, cargo.text))
                 LabelSpacing
