--- a/code/view_maintenance.kv
+++ b/code/view_maintenance.kv
@@ -1,5 +1,5 @@
 #: import C kivy.utils.get_color_from_hex
-<Row@RecycleKVIDsDataViewBehavior+BoxLayout>:
+<ViewM@RecycleKVIDsDataViewBehavior+BoxLayout>:
     estado: estado
     canvas.before:
         Color:
@@ -25,7 +25,7 @@
         id: description
 
 
-<ImplementView>:
+<MaintenanceView>:
     rv: rv
     change_state: change_state
     change_id: change_id
@@ -41,13 +41,13 @@
                 source: 'icos/arrow_back.ico'
                 size_hint: .1, .7
                 on_release: app.go_menu()
-                #on_release: root.clear()
+                on_release: root.clear()
                 on_release: seeker.text = message.text = ""
             BoxLabel:
                 size_hint_x: .65
             Tittle:
                 size_hint_y: .7
-                text: "REGISTRO DE MANTENIMIENTOS"
+                text: "REGISTRO DE IMPLEMENTOS"
             BoxLabel:
                 size_hint_x: 1.
         BoxContainerSentences:
@@ -142,7 +142,7 @@
             id: rv
             scroll_wheel_distance: dp(12) # cantidad de filas que rueda
             bar_width: dp(10)
-            viewclass: 'Row'
+            viewclass: 'ViewM'
             RecycleBoxLayout:
                 default_size: None, dp(56)
                 default_size_hint: 1, None
