--- a/code/implement.kv
+++ b/code/implement.kv
@@ -47,7 +47,7 @@
                 size_hint_x: .65
             Tittle:
                 size_hint_y: .7
-                text: "REGISTRO DE MANTENIMIENTOS"
+                text: "REGISTRO DE IMPLEMENTOS"
             BoxLabel:
                 size_hint_x: 1.
         BoxContainerSentences:
@@ -150,3 +150,5 @@
                 height: self.minimum_height
                 orientation: 'vertical'
                 spacing: dp(2)
+        BoxLabel
+            size_hint_y: .01
