--- a/code/view_maintenance.kv
+++ b/code/view_maintenance.kv
@@ -1,6 +1,5 @@
 #: import C kivy.utils.get_color_from_hex
 <ViewM@RecycleKVIDsDataViewBehavior+BoxLayout>:
-    estado: estado
     canvas.before:
         Color:
             rgba: C("#737373")
@@ -25,13 +24,14 @@
         id: implement
     LabelDate
         id: date
-        size_hint_x: .5
+        size_hint_x: .75
     LabelDate
         id: programmed
-        size_hint_x: .5
+        size_hint_x: .75
 
 <MaintenanceView>:
     rv: rv
+    seeker: seeker
     BoxContainer:
         padding: "5sp"
         orientation: 'vertical'
@@ -61,7 +61,7 @@
                     size_hint_x: .4
                 CustomButton2:
                     text: 'Ver todos'
-                    on_release: message.text = root.show_all_record()
+                    on_release: message.text = root.show_all()
                     on_press: seeker.text = ""
                 CustomButton2:
                     text: 'Limpiar pantalla'
@@ -81,16 +81,16 @@
                     on_focus: message.text = ''
                 CustomButton2:
                     size_hint_x: 0.5
-                    text: 'ID'
-                    on_release: message.text = str(root.search(seeker.text, 1))
+                    text: 'Date'
+                    on_release: message.text = str(root.search(self.text, seeker.text))
                 CustomButton2:
                     size_hint_x: 0.5
-                    text: 'Estado'
-                    on_release: message.text = str(root.search(seeker.text, 2))
+                    text: 'Implement'
+                    on_release: message.text = str(root.search(self.text, seeker.text))
                 CustomButton2:
                     size_hint_x: 0.5
-                    text: "Area"
-                    on_release: message.text = str(root.search(seeker.text, 3))
+                    text: "Maintenance"
+                    on_release: message.text = str(root.search(self.text, seeker.text))
                 BoxLabel
             BoxLabel
             TextMessage:
@@ -104,29 +104,30 @@
             ButtonColumn:
                 size_hint_x: .2
                 text: "ID"
-                on_release:
+                on_release: root.sort(self.text)
             ButtonColumn:
                 text: "Autoriza"
-                on_release:
+                on_release: root.sort(self.text)
             ButtonColumn:
                 text: "Entidad"
-                on_release:
+                on_release: root.sort(self.text)
             ButtonColumn:
                 text: "Asignado"
-                on_release:
+                on_release: root.sort(self.text)
             ButtonColumn:
                 size_hint_x: .35
                 text: "ID MANT"
-                on_release:
+                on_release: root.sort(self.text)
             ButtonColumn:
                 text: "Implemento"
             ButtonColumn:
-                size_hint_x: .5
+                size_hint_x: .76
                 text: "Solicitud"
-                on_release:
+                on_release: root.sort(self.text)
             ButtonColumn:
-                size_hint_x: .5
+                size_hint_x: .76
                 text: "Programado"
+                on_release: root.sort(self.text)
 
         RecycleView:
             id: rv
@@ -140,3 +141,5 @@
                 height: self.minimum_height
                 orientation: 'vertical'
                 spacing: dp(2)
+        BoxLabel
+            size_hint_y: .01
